Hopefully fix arrow alignment

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1043,7 +1043,7 @@ a.product__text {
   }
 
   .product--thumbnail_slider .slider-mobile-gutter .slider-button {
-    display: block;
+    display: flex;
   }
 }
 
